proton-vpn-api-core (0.20.2) unstable; urgency=medium

  * Make API async and avoid thread-safety issues in asyncio code

 -- Josep Llaneras <josep.llaneras@proton.ch>  Wed, 08 Nov 2023 09:51:49 +0100

proton-vpn-api-core (0.20.1) unstable; urgency=medium

  * Update dependencies

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Tue, 10 Oct 2023 11:00:00 +0100

proton-vpn-api-core (0.20.0) unstable; urgency=medium

  * Expose properties which allow to access account related data

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Fri, 15 Sep 2023 11:00:00 +0100

proton-vpn-api-core (0.19.0) unstable; urgency=medium

  * Add kill switch to settings and add dependency for base kill switch package

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Mon, 04 Sep 2023 11:00:00 +0100

proton-vpn-api-core (0.18.0) unstable; urgency=medium

  * Rename setting random_nat to moderate_nat to conform to API specs

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Wed, 19 Jul 2023 11:00:00 +0100

proton-vpn-api-core (0.17.0) unstable; urgency=medium

  * Enable NetShield by default on paid plans

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Fri, 07 Jul 2023 16:00:00 +0100

proton-vpn-api-core (0.16.0) unstable; urgency=medium

  * Add protocol entry to settings

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Wed, 05 Jul 2023 14:00:00 +0100

proton-vpn-api-core (0.15.0) unstable; urgency=medium

  * Implement save method for settings

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Mon, 03 Jul 2023 16:00:00 +0100

proton-vpn-api-core (0.14.0) unstable; urgency=medium

  * Remove split tunneling and ipv6 options from settings

 -- Alexandru Cheltuitor <alexandru.cheltuitor@proton.ch>  Tue, 20 Jun 2023 17:00:00 +0100

proton-vpn-api-core (0.13.0) unstable; urgency=medium

  * Expose server loads update

 -- Josep Llaneras <josep.llaneras@proton.ch>  Wed, 14 Jun 2023 17:21:24 +0200
