@@ -21,16 +21,12 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 """
 from __future__ import annotations
 from dataclasses import dataclass
-from os.path import basename
 
 import distro
 
-from proton.session import FormData, FormField
-from proton.session.api import sync_wrapper
 from proton.sso import ProtonSSO
 from proton.vpn import logging
 from proton.vpn.session import VPNSession
-from proton.vpn.core.reports import BugReportForm
 
 logger = logging.getLogger(__name__)
 DISTRIBUTION = distro.id()
@@ -45,8 +41,6 @@ class ClientTypeMetadata:  # pylint: disable=missing-class-docstring
 
 class SessionHolder:
     """Holds the current session object, initializing it lazily when requested."""
-
-    BUG_REPORT_ENDPOINT = "/core/v4/reports/bug"
 
     def __init__(
         self, client_type_metadata: ClientTypeMetadata,
@@ -79,25 +73,3 @@ class SessionHolder:
             )
 
         return self._session
-
-    async def submit_bug_report(self, bug_report: BugReportForm):
-        """Submits a bug report to customer support."""
-        data = FormData()
-        data.add(FormField(name="OS", value=bug_report.os))
-        data.add(FormField(name="OSVersion", value=bug_report.os_version))
-        data.add(FormField(name="Client", value=bug_report.client))
-        data.add(FormField(name="ClientVersion", value=bug_report.client_version))
-        data.add(FormField(name="ClientType", value=bug_report.client_type))
-        data.add(FormField(name="Title", value=bug_report.title))
-        data.add(FormField(name="Description", value=bug_report.description))
-        data.add(FormField(name="Username", value=bug_report.username))
-        data.add(FormField(name="Email", value=bug_report.email))
-        for i, attachment in enumerate(bug_report.attachments):
-            data.add(FormField(
-                name=f"Attachment-{i}", value=attachment,
-                filename=basename(attachment.name)
-            ))
-
-        return await self._session.async_api_request(
-            endpoint=SessionHolder.BUG_REPORT_ENDPOINT, data=data
-        )
